parser/asgn3Final/bin/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE
    TDASH

Grammar

Rule 0     S' -> sdash
Rule 1     sdash -> chunk
Rule 2     sdash -> chunk laststat
Rule 3     sdash -> chunk laststat SEMI
Rule 4     chunk -> chunk stat
Rule 5     chunk -> chunk stat SEMI
Rule 6     chunk -> stat SEMI
Rule 7     chunk -> empty
Rule 8     block -> sdash
Rule 9     stat -> varlist EQUALS explist
Rule 10    stat -> do block end
Rule 11    stat -> functioncall
Rule 12    stat -> while exp do block end
Rule 13    stat -> repeat block until exp
Rule 14    stat -> if exp then block ifblock else block end
Rule 15    stat -> if exp then block ifblock end
Rule 16    stat -> for names EQUALS exp COMMA exp do block end
Rule 17    stat -> for names EQUALS exp COMMA exp COMMA exp do block end
Rule 18    stat -> for namelist in explist do block end
Rule 19    stat -> local namelist
Rule 20    stat -> local namelist EQUALS explist
Rule 21    stat -> function funcname funcbody
Rule 22    stat -> local function names funcbody
Rule 23    funcbody -> LPAREN RPAREN block end
Rule 24    funcbody -> LPAREN parlist RPAREN block end
Rule 25    functioncall -> prefixexp args
Rule 26    args -> LPAREN RPAREN
Rule 27    args -> LPAREN explist RPAREN
Rule 28    args -> tableconstructor
Rule 29    args -> STRING
Rule 30    parlist -> namelist
Rule 31    parlist -> namelist comtrp
Rule 32    parlist -> TRPLDOTS
Rule 33    comtrp -> COMMA TRPLDOTS
Rule 34    laststat -> return retexplist
Rule 35    laststat -> return
Rule 36    laststat -> break
Rule 37    funcname -> names dotid COLON
Rule 38    funcname -> names
Rule 39    dotid -> SDOT names dotid
Rule 40    dotid -> empty
Rule 41    comvar -> COMMA var comvar
Rule 42    comvar -> empty
Rule 43    comid -> COMMA names comid
Rule 44    comid -> empty
Rule 45    ifblock -> ifblock elseif exp then block
Rule 46    ifblock -> empty
Rule 47    varlist -> var comvar
Rule 48    var -> names
Rule 49    var -> prefixexp LSQUARE exp RSQUARE
Rule 50    var -> prefixexp SDOT names
Rule 51    namelist -> names comid
Rule 52    explist -> explist COMMA exp
Rule 53    explist -> exp
Rule 54    exp -> nil
Rule 55    exp -> false
Rule 56    exp -> true
Rule 57    exp -> Number
Rule 58    exp -> STRING
Rule 59    exp -> TRPLDOTS
Rule 60    exp -> function
Rule 61    exp -> prefixexp
Rule 62    exp -> exp PLUS exp
Rule 63    exp -> exp MINUS exp
Rule 64    exp -> exp TIMES exp
Rule 65    exp -> exp DIVIDE exp
Rule 66    exp -> exp POWER exp
Rule 67    exp -> exp LT exp
Rule 68    exp -> exp LE exp
Rule 69    exp -> exp GT exp
Rule 70    exp -> exp GE exp
Rule 71    exp -> exp NE exp
Rule 72    exp -> exp CHECKEQ exp
Rule 73    exp -> exp and exp
Rule 74    exp -> exp or exp
Rule 75    exp -> exp MODULO exp
Rule 76    exp -> exp DBLDOTS exp
Rule 77    exp -> tableconstructor
Rule 78    exp -> unop exp
Rule 79    retexplist -> retexplist COMMA retexp
Rule 80    retexplist -> retexp
Rule 81    retexp -> nil
Rule 82    retexp -> false
Rule 83    retexp -> true
Rule 84    retexp -> Number
Rule 85    retexp -> STRING
Rule 86    retexp -> TRPLDOTS
Rule 87    retexp -> prefixexp
Rule 88    retexp -> exp PLUS exp
Rule 89    retexp -> exp MINUS exp
Rule 90    retexp -> exp TIMES exp
Rule 91    retexp -> exp DIVIDE exp
Rule 92    retexp -> exp POWER exp
Rule 93    retexp -> exp LT exp
Rule 94    retexp -> exp LE exp
Rule 95    retexp -> exp GT exp
Rule 96    retexp -> exp GE exp
Rule 97    retexp -> exp NE exp
Rule 98    retexp -> exp CHECKEQ exp
Rule 99    retexp -> exp and exp
Rule 100   retexp -> exp or exp
Rule 101   retexp -> exp MODULO exp
Rule 102   retexp -> exp DBLDOTS exp
Rule 103   retexp -> tableconstructor
Rule 104   retexp -> unop exp
Rule 105   Number -> INTEGER
Rule 106   Number -> FLOAT
Rule 107   Number -> HEX
Rule 108   empty -> <empty>
Rule 109   prefixexp -> var
Rule 110   prefixexp -> LPAREN exp RPAREN
Rule 111   prefixexp -> functioncall
Rule 112   unop -> MINUS
Rule 113   unop -> not
Rule 114   unop -> HASH
Rule 115   tableconstructor -> LCURLY fieldlist RCURLY
Rule 116   tableconstructor -> LCURLY RCURLY
Rule 117   fieldlist -> field fieldseplist fieldsep
Rule 118   fieldlist -> field fieldseplist
Rule 119   fieldseplist -> fieldseplist fieldsep field
Rule 120   fieldseplist -> empty
Rule 121   field -> LSQUARE exp RSQUARE EQUALS exp
Rule 122   field -> names EQUALS exp
Rule 123   field -> exp
Rule 124   fieldsep -> COMMA
Rule 125   fieldsep -> SEMI
Rule 126   names -> ID
Rule 127   names -> RESID

Terminals, with rules where they appear

CHECKEQ              : 72 98
COLON                : 37
COMMA                : 16 17 17 33 41 43 52 79 124
DBLDOTS              : 76 102
DIVIDE               : 65 91
EQUALS               : 9 16 17 20 121 122
FLOAT                : 106
GE                   : 70 96
GT                   : 69 95
HASH                 : 114
HEX                  : 107
ID                   : 126
INTEGER              : 105
LCURLY               : 115 116
LE                   : 68 94
LPAREN               : 23 24 26 27 110
LSQUARE              : 49 121
LT                   : 67 93
MINUS                : 63 89 112
MODULO               : 75 101
NE                   : 71 97
NEWLINE              : 
PLUS                 : 62 88
POWER                : 66 92
RCURLY               : 115 116
RESID                : 127
RPAREN               : 23 24 26 27 110
RSQUARE              : 49 121
SDOT                 : 39 50
SEMI                 : 3 5 6 125
STRING               : 29 58 85
TDASH                : 
TIMES                : 64 90
TRPLDOTS             : 32 33 59 86
and                  : 73 99
break                : 36
do                   : 10 12 16 17 18
else                 : 14
elseif               : 45
end                  : 10 12 14 15 16 17 18 23 24
error                : 
false                : 55 82
for                  : 16 17 18
function             : 21 22 60
if                   : 14 15
in                   : 18
local                : 19 20 22
nil                  : 54 81
not                  : 113
or                   : 74 100
repeat               : 13
return               : 34 35
then                 : 14 15 45
true                 : 56 83
until                : 13
while                : 12

Nonterminals, with rules where they appear

Number               : 57 84
args                 : 25
block                : 10 12 13 14 14 15 16 17 18 23 24 45
chunk                : 1 2 3 4 5
comid                : 43 51
comtrp               : 31
comvar               : 41 47
dotid                : 37 39
empty                : 7 40 42 44 46 120
exp                  : 12 13 14 15 16 16 17 17 17 45 49 52 53 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 78 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 104 110 121 121 122 123
explist              : 9 18 20 27 52
field                : 117 118 119
fieldlist            : 115
fieldsep             : 117 119
fieldseplist         : 117 118 119
funcbody             : 21 22
funcname             : 21
functioncall         : 11 111
ifblock              : 14 15 45
laststat             : 2 3
namelist             : 18 19 20 30 31
names                : 16 17 22 37 38 39 43 48 50 51 122
parlist              : 24
prefixexp            : 25 49 50 61 87
retexp               : 79 80
retexplist           : 34 79
sdash                : 8 0
stat                 : 4 5 6
tableconstructor     : 28 77 103
unop                 : 78 104
var                  : 41 47 109
varlist              : 9

Parsing method: LALR

state 0

    (0) S' -> . sdash
    (1) sdash -> . chunk
    (2) sdash -> . chunk laststat
    (3) sdash -> . chunk laststat SEMI
    (4) chunk -> . chunk stat
    (5) chunk -> . chunk stat SEMI
    (6) chunk -> . stat SEMI
    (7) chunk -> . empty
    (9) stat -> . varlist EQUALS explist
    (10) stat -> . do block end
    (11) stat -> . functioncall
    (12) stat -> . while exp do block end
    (13) stat -> . repeat block until exp
    (14) stat -> . if exp then block ifblock else block end
    (15) stat -> . if exp then block ifblock end
    (16) stat -> . for names EQUALS exp COMMA exp do block end
    (17) stat -> . for names EQUALS exp COMMA exp COMMA exp do block end
    (18) stat -> . for namelist in explist do block end
    (19) stat -> . local namelist
    (20) stat -> . local namelist EQUALS explist
    (21) stat -> . function funcname funcbody
    (22) stat -> . local function names funcbody
    (108) empty -> .
    (47) varlist -> . var comvar
    (25) functioncall -> . prefixexp args
    (48) var -> . names
    (49) var -> . prefixexp LSQUARE exp RSQUARE
    (50) var -> . prefixexp SDOT names
    (109) prefixexp -> . var
    (110) prefixexp -> . LPAREN exp RPAREN
    (111) prefixexp -> . functioncall
    (126) names -> . ID
    (127) names -> . RESID

  ! shift/reduce conflict for do resolved as shift
  ! shift/reduce conflict for while resolved as shift
  ! shift/reduce conflict for repeat resolved as shift
  ! shift/reduce conflict for if resolved as shift
  ! shift/reduce conflict for for resolved as shift
  ! shift/reduce conflict for local resolved as shift
  ! shift/reduce conflict for function resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for RESID resolved as shift
    do              shift and go to state 13
    while           shift and go to state 17
    repeat          shift and go to state 15
    if              shift and go to state 5
    for             shift and go to state 7
    local           shift and go to state 10
    function        shift and go to state 12
    return          reduce using rule 108 (empty -> .)
    break           reduce using rule 108 (empty -> .)
    $end            reduce using rule 108 (empty -> .)
    LPAREN          shift and go to state 2
    ID              shift and go to state 16
    RESID           shift and go to state 1

  ! do              [ reduce using rule 108 (empty -> .) ]
  ! while           [ reduce using rule 108 (empty -> .) ]
  ! repeat          [ reduce using rule 108 (empty -> .) ]
  ! if              [ reduce using rule 108 (empty -> .) ]
  ! for             [ reduce using rule 108 (empty -> .) ]
  ! local           [ reduce using rule 108 (empty -> .) ]
  ! function        [ reduce using rule 108 (empty -> .) ]
  ! LPAREN          [ reduce using rule 108 (empty -> .) ]
  ! ID              [ reduce using rule 108 (empty -> .) ]
  ! RESID           [ reduce using rule 108 (empty -> .) ]

    prefixexp                      shift and go to state 6
    stat                           shift and go to state 14
    varlist                        shift and go to state 8
    chunk                          shift and go to state 3
    functioncall                   shift and go to state 18
    sdash                          shift and go to state 19
    var                            shift and go to state 9
    empty                          shift and go to state 11
    names                          shift and go to state 4

state 1

    (127) names -> RESID .

    COMMA           reduce using rule 127 (names -> RESID .)
    EQUALS          reduce using rule 127 (names -> RESID .)
    LSQUARE         reduce using rule 127 (names -> RESID .)
    SDOT            reduce using rule 127 (names -> RESID .)
    LPAREN          reduce using rule 127 (names -> RESID .)
    STRING          reduce using rule 127 (names -> RESID .)
    LCURLY          reduce using rule 127 (names -> RESID .)
    PLUS            reduce using rule 127 (names -> RESID .)
    MINUS           reduce using rule 127 (names -> RESID .)
    TIMES           reduce using rule 127 (names -> RESID .)
    DIVIDE          reduce using rule 127 (names -> RESID .)
    POWER           reduce using rule 127 (names -> RESID .)
    LT              reduce using rule 127 (names -> RESID .)
    LE              reduce using rule 127 (names -> RESID .)
    GT              reduce using rule 127 (names -> RESID .)
    GE              reduce using rule 127 (names -> RESID .)
    NE              reduce using rule 127 (names -> RESID .)
    CHECKEQ         reduce using rule 127 (names -> RESID .)
    and             reduce using rule 127 (names -> RESID .)
    or              reduce using rule 127 (names -> RESID .)
    MODULO          reduce using rule 127 (names -> RESID .)
    DBLDOTS         reduce using rule 127 (names -> RESID .)
    SEMI            reduce using rule 127 (names -> RESID .)
    $end            reduce using rule 127 (names -> RESID .)
    end             reduce using rule 127 (names -> RESID .)
    until           reduce using rule 127 (names -> RESID .)
    else            reduce using rule 127 (names -> RESID .)
    elseif          reduce using rule 127 (names -> RESID .)
    return          reduce using rule 127 (names -> RESID .)
    break           reduce using rule 127 (names -> RESID .)
    do              reduce using rule 127 (names -> RESID .)
    while           reduce using rule 127 (names -> RESID .)
    repeat          reduce using rule 127 (names -> RESID .)
    if              reduce using rule 127 (names -> RESID .)
    for             reduce using rule 127 (names -> RESID .)
    local           reduce using rule 127 (names -> RESID .)
    function        reduce using rule 127 (names -> RESID .)
    ID              reduce using rule 127 (names -> RESID .)
    RESID           reduce using rule 127 (names -> RESID .)
    RCURLY          reduce using rule 127 (names -> RESID .)
    RPAREN          reduce using rule 127 (names -> RESID .)
    then            reduce using rule 127 (names -> RESID .)
    RSQUARE         reduce using rule 127 (names -> RESID .)
    COLON           reduce using rule 127 (names -> RESID .)
    in              reduce using rule 127 (names -> RESID .)


state 2

    (110) prefixexp -> LPAREN . exp RPAREN
    (54) exp -> . nil
    (55) exp -> . false
    (56) exp -> . true
    (57) exp -> . Number
    (58) exp -> . STRING
    (59) exp -> . TRPLDOTS
    (60) exp -> . function
    (61) exp -> . prefixexp
    (62) exp -> . exp PLUS exp
    (63) exp -> . exp MINUS exp
    (64) exp -> . exp TIMES exp
    (65) exp -> . exp DIVIDE exp
    (66) exp -> . exp POWER exp
    (67) exp -> . exp LT exp
    (68) exp -> . exp LE exp
    (69) exp -> . exp GT exp
    (70) exp -> . exp GE exp
    (71) exp -> . exp NE exp
    (72) exp -> . exp CHECKEQ exp
    (73) exp -> . exp and exp
    (74) exp -> . exp or exp
    (75) exp -> . exp MODULO exp
    (76) exp -> . exp DBLDOTS exp
    (77) exp -> . tableconstructor
    (78) exp -> . unop exp
    (105) Number -> . INTEGER
    (106) Number -> . FLOAT
    (107) Number -> . HEX
    (109) prefixexp -> . var
    (110) prefixexp -> . LPAREN exp RPAREN
    (111) prefixexp -> . functioncall
    (115) tableconstructor -> . LCURLY fieldlist RCURLY
    (116) tableconstructor -> . LCURLY RCURLY
    (112) unop -> . MINUS
    (113) unop -> . not
    (114) unop -> . HASH
    (48) var -> . names
    (49) var -> . prefixexp LSQUARE exp RSQUARE
    (50) var -> . prefixexp SDOT names
    (25) functioncall -> . prefixexp args
    (126) names -> . ID
    (127) names -> . RESID

    nil             shift and go to state 30
    false           shift and go to state 21
    true            shift and go to state 33
    STRING          shift and go to state 25
    TRPLDOTS        shift and go to state 39
    function        shift and go to state 29
    INTEGER         shift and go to state 28
    FLOAT           shift and go to state 34
    HEX             shift and go to state 31
    LPAREN          shift and go to state 2
    LCURLY          shift and go to state 22
    MINUS           shift and go to state 24
    not             shift and go to state 32
    HASH            shift and go to state 23
    ID              shift and go to state 16
    RESID           shift and go to state 1

    prefixexp                      shift and go to state 26
    tableconstructor               shift and go to state 20
    Number                         shift and go to state 35
    unop                           shift and go to state 38
    functioncall                   shift and go to state 36
    exp                            shift and go to state 37
    var                            shift and go to state 27
    names                          shift and go to state 4

state 3

    (1) sdash -> chunk .
    (2) sdash -> chunk . laststat
    (3) sdash -> chunk . laststat SEMI
    (4) chunk -> chunk . stat
    (5) chunk -> chunk . stat SEMI
    (34) laststat -> . return retexplist
    (35) laststat -> . return
    (36) laststat -> . break
    (9) stat -> . varlist EQUALS explist
    (10) stat -> . do block end
    (11) stat -> . functioncall
    (12) stat -> . while exp do block end
    (13) stat -> . repeat block until exp
    (14) stat -> . if exp then block ifblock else block end
    (15) stat -> . if exp then block ifblock end
    (16) stat -> . for names EQUALS exp COMMA exp do block end
    (17) stat -> . for names EQUALS exp COMMA exp COMMA exp do block end
    (18) stat -> . for namelist in explist do block end
    (19) stat -> . local namelist
    (20) stat -> . local namelist EQUALS explist
    (21) stat -> . function funcname funcbody
    (22) stat -> . local function names funcbody
    (47) varlist -> . var comvar
    (25) functioncall -> . prefixexp args
    (48) var -> . names
    (49) var -> . prefixexp LSQUARE exp RSQUARE
    (50) var -> . prefixexp SDOT names
    (109) prefixexp -> . var
    (110) prefixexp -> . LPAREN exp RPAREN
    (111) prefixexp -> . functioncall
    (126) names -> . ID
    (127) names -> . RESID

    end             reduce using rule 1 (sdash -> chunk .)
    else            reduce using rule 1 (sdash -> chunk .)
    elseif          reduce using rule 1 (sdash -> chunk .)
    $end            reduce using rule 1 (sdash -> chunk .)
    until           reduce using rule 1 (sdash -> chunk .)
    return          shift and go to state 42
    break           shift and go to state 43
    do              shift and go to state 13
    while           shift and go to state 17
    repeat          shift and go to state 15
    if              shift and go to state 5
    for             shift and go to state 7
    local           shift and go to state 10
    function        shift and go to state 12
    LPAREN          shift and go to state 2
    ID              shift and go to state 16
    RESID           shift and go to state 1

    prefixexp                      shift and go to state 6
    stat                           shift and go to state 41
    varlist                        shift and go to state 8
    laststat                       shift and go to state 40
    names                          shift and go to state 4
    var                            shift and go to state 9
    functioncall                   shift and go to state 18

state 4

    (48) var -> names .

    COMMA           reduce using rule 48 (var -> names .)
    EQUALS          reduce using rule 48 (var -> names .)
    LSQUARE         reduce using rule 48 (var -> names .)
    SDOT            reduce using rule 48 (var -> names .)
    LPAREN          reduce using rule 48 (var -> names .)
    STRING          reduce using rule 48 (var -> names .)
    LCURLY          reduce using rule 48 (var -> names .)
    PLUS            reduce using rule 48 (var -> names .)
    MINUS           reduce using rule 48 (var -> names .)
    TIMES           reduce using rule 48 (var -> names .)
    DIVIDE          reduce using rule 48 (var -> names .)
    POWER           reduce using rule 48 (var -> names .)
    LT              reduce using rule 48 (var -> names .)
    LE              reduce using rule 48 (var -> names .)
    GT              reduce using rule 48 (var -> names .)
    GE              reduce using rule 48 (var -> names .)
    NE              reduce using rule 48 (var -> names .)
    CHECKEQ         reduce using rule 48 (var -> names .)
    and             reduce using rule 48 (var -> names .)
    or              reduce using rule 48 (var -> names .)
    MODULO          reduce using rule 48 (var -> names .)
    DBLDOTS         reduce using rule 48 (var -> names .)
    SEMI            reduce using rule 48 (var -> names .)
    $end            reduce using rule 48 (var -> names .)
    end             reduce using rule 48 (var -> names .)
    until           reduce using rule 48 (var -> names .)
    else            reduce using rule 48 (var -> names .)
    elseif          reduce using rule 48 (var -> names .)
    RSQUARE         reduce using rule 48 (var -> names .)
    RPAREN          reduce using rule 48 (var -> names .)
    then            reduce using rule 48 (var -> names .)
    do              reduce using rule 48 (var -> names .)
    RCURLY          reduce using rule 48 (var -> names .)
    return          reduce using rule 48 (var -> names .)
    break           reduce using rule 48 (var -> names .)
    while           reduce using rule 48 (var -> names .)
    repeat          reduce using rule 48 (var -> names .)
    if              reduce using rule 48 (var -> names .)
    for             reduce using rule 48 (var -> names .)
    local           reduce using rule 48 (var -> names .)
    function        reduce using rule 48 (var -> names .)
    ID              reduce using rule 48 (var -> names .)
    RESID           reduce using rule 48 (var -> names .)


state 5

    (14) stat -> if . exp then block ifblock else block end
    (15) stat -> if . exp then block ifblock end
    (54) exp -> . nil
    (55) exp -> . false
    (56) exp -> . true
    (57) exp -> . Number
    (58) exp -> . STRING
    (59) exp -> . TRPLDOTS
    (60) exp -> . function
    (61) exp -> . prefixexp
    (62) exp -> . exp PLUS exp
    (63) exp -> . exp MINUS exp
    (64) exp -> . exp TIMES exp
    (65) exp -> . exp DIVIDE exp
    (66) exp -> . exp POWER exp
    (67) exp -> . exp LT exp
    (68) exp -> . exp LE exp
    (69) exp -> . exp GT exp
    (70) exp -> . exp GE exp
    (71) exp -> . exp NE exp
    (72) exp -> . exp CHECKEQ exp
    (73) exp -> . exp and exp
    (74) exp -> . exp or exp
    (75) exp -> . exp MODULO exp
    (76) exp -> . exp DBLDOTS exp
    (77) exp -> . tableconstructor
    (78) exp -> . unop exp
    (105) Number -> . INTEGER
    (106) Number -> . FLOAT
    (107) Number -> . HEX
    (109) prefixexp -> . var
    (110) prefixexp -> . LPAREN exp RPAREN
    (111) prefixexp -> . functioncall
    (115) tableconstructor -> . LCURLY fieldlist RCURLY
    (116) tableconstructor -> . LCURLY RCURLY
    (112) unop -> . MINUS
    (113) unop -> . not
    (114) unop -> . HASH
    (48) var -> . names
    (49) var -> . prefixexp LSQUARE exp RSQUARE
    (50) var -> . prefixexp SDOT names
    (25) functioncall -> . prefixexp args
    (126) names -> . ID
    (127) names -> . RESID

    nil             shift and go to state 30
    false           shift and go to state 21
    true            shift and go to state 33
    STRING          shift and go to state 25
    TRPLDOTS        shift and go to state 39
    function        shift and go to state 29
    INTEGER         shift and go to state 28
    FLOAT           shift and go to state 34
    HEX             shift and go to state 31
    LPAREN          shift and go to state 2
    LCURLY          shift and go to state 22
    MINUS           shift and go to state 24
    not             shift and go to state 32
    HASH            shift and go to state 23
    ID              shift and go to state 16
    RESID           shift and go to state 1

    prefixexp                      shift and go to state 26
    tableconstructor               shift and go to state 20
    Number                         shift and go to state 35
    unop                           shift and go to state 38
    functioncall                   shift and go to state 36
    exp                            shift and go to state 44
    var                            shift and go to state 27
    names                          shift and go to state 4

state 6

    (25) functioncall -> prefixexp . args
    (49) var -> prefixexp . LSQUARE exp RSQUARE
    (50) var -> prefixexp . SDOT names
    (26) args -> . LPAREN RPAREN
    (27) args -> . LPAREN explist RPAREN
    (28) args -> . tableconstructor
    (29) args -> . STRING
    (115) tableconstructor -> . LCURLY fieldlist RCURLY
    (116) tableconstructor -> . LCURLY RCURLY

    LSQUARE         shift and go to state 46
    SDOT            shift and go to state 49
    LPAREN          shift and go to state 48
    STRING          shift and go to state 50
    LCURLY          shift and go to state 22

    tableconstructor               shift and go to state 45
    args                           shift and go to state 47

state 7

    (16) stat -> for . names EQUALS exp COMMA exp do block end
    (17) stat -> for . names EQUALS exp COMMA exp COMMA exp do block end
    (18) stat -> for . namelist in explist do block end
    (126) names -> . ID
    (127) names -> . RESID
    (51) namelist -> . names comid

    ID              shift and go to state 16
    RESID           shift and go to state 1

    namelist                       shift and go to state 51
    names                          shift and go to state 52

state 8

    (9) stat -> varlist . EQUALS explist

    EQUALS          shift and go to state 53


state 9

    (47) varlist -> var . comvar
    (109) prefixexp -> var .
    (41) comvar -> . COMMA var comvar
    (42) comvar -> . empty
    (108) empty -> .

    LSQUARE         reduce using rule 109 (prefixexp -> var .)
    SDOT            reduce using rule 109 (prefixexp -> var .)
    LPAREN          reduce using rule 109 (prefixexp -> var .)
    STRING          reduce using rule 109 (prefixexp -> var .)
    LCURLY          reduce using rule 109 (prefixexp -> var .)
    COMMA           shift and go to state 54
    EQUALS          reduce using rule 108 (empty -> .)

    comvar                         shift and go to state 55
    empty                          shift and go to state 56

state 10

    (19) stat -> local . namelist
    (20) stat -> local . namelist EQUALS explist
    (22) stat -> local . function names funcbody
    (51) namelist -> . names comid
    (126) names -> . ID
    (127) names -> . RESID

    function        shift and go to state 57
    ID              shift and go to state 16
    RESID           shift and go to state 1

    namelist                       shift and go to state 58
    names                          shift and go to state 59

state 11

    (7) chunk -> empty .

    return          reduce using rule 7 (chunk -> empty .)
    break           reduce using rule 7 (chunk -> empty .)
    do              reduce using rule 7 (chunk -> empty .)
    while           reduce using rule 7 (chunk -> empty .)
    repeat          reduce using rule 7 (chunk -> empty .)
    if              reduce using rule 7 (chunk -> empty .)
    for             reduce using rule 7 (chunk -> empty .)
    local           reduce using rule 7 (chunk -> empty .)
    function        reduce using rule 7 (chunk -> empty .)
    LPAREN          reduce using rule 7 (chunk -> empty .)
    ID              reduce using rule 7 (chunk -> empty .)
    RESID           reduce using rule 7 (chunk -> empty .)
    end             reduce using rule 7 (chunk -> empty .)
    else            reduce using rule 7 (chunk -> empty .)
    elseif          reduce using rule 7 (chunk -> empty .)
    until           reduce using rule 7 (chunk -> empty .)
    $end            reduce using rule 7 (chunk -> empty .)


state 12

    (21) stat -> function . funcname funcbody
    (37) funcname -> . names dotid COLON
    (38) funcname -> . names
    (126) names -> . ID
    (127) names -> . RESID

    ID              shift and go to state 16
    RESID           shift and go to state 1

    names                          shift and go to state 61
    funcname                       shift and go to state 60

state 13

    (10) stat -> do . block end
    (8) block -> . sdash
    (1) sdash -> . chunk
    (2) sdash -> . chunk laststat
    (3) sdash -> . chunk laststat SEMI
    (4) chunk -> . chunk stat
    (5) chunk -> . chunk stat SEMI
    (6) chunk -> . stat SEMI
    (7) chunk -> . empty
    (9) stat -> . varlist EQUALS explist
    (10) stat -> . do block end
    (11) stat -> . functioncall
    (12) stat -> . while exp do block end
    (13) stat -> . repeat block until exp
    (14) stat -> . if exp then block ifblock else block end
    (15) stat -> . if exp then block ifblock end
    (16) stat -> . for names EQUALS exp COMMA exp do block end
    (17) stat -> . for names EQUALS exp COMMA exp COMMA exp do block end
    (18) stat -> . for namelist in explist do block end
    (19) stat -> . local namelist
    (20) stat -> . local namelist EQUALS explist
    (21) stat -> . function funcname funcbody
    (22) stat -> . local function names funcbody
    (108) empty -> .
    (47) varlist -> . var comvar
    (25) functioncall -> . prefixexp args
    (48) var -> . names
    (49) var -> . prefixexp LSQUARE exp RSQUARE
    (50) var -> . prefixexp SDOT names
    (109) prefixexp -> . var
    (110) prefixexp -> . LPAREN exp RPAREN
    (111) prefixexp -> . functioncall
    (126) names -> . ID
    (127) names -> . RESID

  ! shift/reduce conflict for do resolved as shift
  ! shift/reduce conflict for while resolved as shift
  ! shift/reduce conflict for repeat resolved as shift
  ! shift/reduce conflict for if resolved as shift
  ! shift/reduce conflict for for resolved as shift
  ! shift/reduce conflict for local resolved as shift
  ! shift/reduce conflict for function resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for RESID resolved as shift
    do              shift and go to state 13
    while           shift and go to state 17
    repeat          shift and go to state 15
    if              shift and go to state 5
    for             shift and go to state 7
    local           shift and go to state 10
    function        shift and go to state 12
    return          reduce using rule 108 (empty -> .)
    break           reduce using rule 108 (empty -> .)
    end             reduce using rule 108 (empty -> .)
    LPAREN          shift and go to state 2
    ID              shift and go to state 16
    RESID           shift and go to state 1

  ! do              [ reduce using rule 108 (empty -> .) ]
  ! while           [ reduce using rule 108 (empty -> .) ]
  ! repeat          [ reduce using rule 108 (empty -> .) ]
  ! if              [ reduce using rule 108 (empty -> .) ]
  ! for             [ reduce using rule 108 (empty -> .) ]
  ! local           [ reduce using rule 108 (empty -> .) ]
  ! function        [ reduce using rule 108 (empty -> .) ]
  ! LPAREN          [ reduce using rule 108 (empty -> .) ]
  ! ID              [ reduce using rule 108 (empty -> .) ]
  ! RESID           [ reduce using rule 108 (empty -> .) ]

    prefixexp                      shift and go to state 6
    stat                           shift and go to state 14
    varlist                        shift and go to state 8
    chunk                          shift and go to state 3
    empty                          shift and go to state 11
    functioncall                   shift and go to state 18
    block                          shift and go to state 63
    var                            shift and go to state 9
    sdash                          shift and go to state 62
    names                          shift and go to state 4

state 14

    (6) chunk -> stat . SEMI

    SEMI            shift and go to state 64


state 15

    (13) stat -> repeat . block until exp
    (8) block -> . sdash
    (1) sdash -> . chunk
    (2) sdash -> . chunk laststat
    (3) sdash -> . chunk laststat SEMI
    (4) chunk -> . chunk stat
    (5) chunk -> . chunk stat SEMI
    (6) chunk -> . stat SEMI
    (7) chunk -> . empty
    (9) stat -> . varlist EQUALS explist
    (10) stat -> . do block end
    (11) stat -> . functioncall
    (12) stat -> . while exp do block end
    (13) stat -> . repeat block until exp
    (14) stat -> . if exp then block ifblock else block end
    (15) stat -> . if exp then block ifblock end
    (16) stat -> . for names EQUALS exp COMMA exp do block end
    (17) stat -> . for names EQUALS exp COMMA exp COMMA exp do block end
    (18) stat -> . for namelist in explist do block end
    (19) stat -> . local namelist
    (20) stat -> . local namelist EQUALS explist
    (21) stat -> . function funcname funcbody
    (22) stat -> . local function names funcbody
    (108) empty -> .
    (47) varlist -> . var comvar
    (25) functioncall -> . prefixexp args
    (48) var -> . names
    (49) var -> . prefixexp LSQUARE exp RSQUARE
    (50) var -> . prefixexp SDOT names
    (109) prefixexp -> . var
    (110) prefixexp -> . LPAREN exp RPAREN
    (111) prefixexp -> . functioncall
    (126) names -> . ID
    (127) names -> . RESID

  ! shift/reduce conflict for do resolved as shift
  ! shift/reduce conflict for while resolved as shift
  ! shift/reduce conflict for repeat resolved as shift
  ! shift/reduce conflict for if resolved as shift
  ! shift/reduce conflict for for resolved as shift
  ! shift/reduce conflict for local resolved as shift
  ! shift/reduce conflict for function resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for RESID resolved as shift
    do              shift and go to state 13
    while           shift and go to state 17
    repeat          shift and go to state 15
    if              shift and go to state 5
    for             shift and go to state 7
    local           shift and go to state 10
    function        shift and go to state 12
    return          reduce using rule 108 (empty -> .)
    break           reduce using rule 108 (empty -> .)
    until           reduce using rule 108 (empty -> .)
    LPAREN          shift and go to state 2
    ID              shift and go to state 16
    RESID           shift and go to state 1

  ! do              [ reduce using rule 108 (empty -> .) ]
  ! while           [ reduce using rule 108 (empty -> .) ]
  ! repeat          [ reduce using rule 108 (empty -> .) ]
  ! if              [ reduce using rule 108 (empty -> .) ]
  ! for             [ reduce using rule 108 (empty -> .) ]
  ! local           [ reduce using rule 108 (empty -> .) ]
  ! function        [ reduce using rule 108 (empty -> .) ]
  ! LPAREN          [ reduce using rule 108 (empty -> .) ]
  ! ID              [ reduce using rule 108 (empty -> .) ]
  ! RESID           [ reduce using rule 108 (empty -> .) ]

    prefixexp                      shift and go to state 6
    stat                           shift and go to state 14
    varlist                        shift and go to state 8
    chunk                          shift and go to state 3
    empty                          shift and go to state 11
    functioncall                   shift and go to state 18
    sdash                          shift and go to state 62
    var                            shift and go to state 9
    block                          shift and go to state 65
    names                          shift and go to state 4

state 16

    (126) names -> ID .
